k8s/k8s-full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sentiment
  template:
    metadata:
      labels:
        app: sentiment
    spec:
      containers:
        - name: java-app
          image: sentiment-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  labels:
    app: sentiment
spec:
  type: NodePort
  selector:
    app: sentiment
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sentiment-service
                port:
                  number: 80
